<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/layout_allFilled_style"
    android:orientation="vertical">

    <LinearLayout
        style="@style/layout_allFilled_style"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            style="@style/item_layout"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@+id/tabCarNo"
                style="@style/layout_allFilled_style"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/item_tv_title_style"
                    android:layout_gravity="center"
                    android:duplicateParentState="true"
                    android:gravity="center"
                    android:text="@string/tip_coupon_tab_plate_num"
                    android:textColor="@color/pop_attribution_textview_selector" />

                <View
                    style="@style/line_style"
                    android:layout_height="1dp"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:background="@drawable/tab_line_selector"
                    android:duplicateParentState="true" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/tabCard"
                style="@style/layout_allFilled_style"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/item_tv_title_style"
                    android:layout_gravity="center"
                    android:duplicateParentState="true"
                    android:gravity="center"
                    android:text="@string/tip_coupon_tab_card"
                    android:textColor="@color/pop_attribution_textview_selector" />

                <View
                    style="@style/line_style"
                    android:layout_height="1dp"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:background="@drawable/tab_line_selector"
                    android:duplicateParentState="true" />
            </FrameLayout>
        </LinearLayout>

        <View style="@style/line_style" />

        <FrameLayout
            style="@style/layout_widthfilled_style"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layoutPlateNum"
                style="@style/item_layout"
                android:layout_height="50dp"
                android:layout_margin="@dimen/layout_Margin_10"
                android:background="@drawable/layout_border_edittext_bg"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvCode"
                    style="@style/item_tv_style"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:gravity="center"
                    android:paddingLeft="@dimen/layout_Margin_15"
                    android:paddingRight="@dimen/layout_Margin_15"
                    android:text="粤"
                    android:textColor="@color/btn_color_normal"
                    android:textSize="@dimen/text_size_18" />

                <TextView
                    style="@style/line_2_style"
                    android:layout_marginBottom="@dimen/layout_Margin_5"
                    android:layout_marginTop="@dimen/layout_Margin_5" />

                <EditText
                    android:id="@+id/edCarno"
                    style="@style/item_ed_style"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="left|center_vertical"
                    android:hint="@string/tip_input_car_num"
                    android:inputType="textCapSentences"
                    android:maxLength="6"
                    android:paddingLeft="@dimen/layout_Margin_15"
                    android:paddingRight="@dimen/layout_Margin_15" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutCard"
                style="@style/item_layout"
                android:layout_height="50dp"
                android:layout_margin="@dimen/layout_Margin_10"
                android:background="@drawable/layout_border_edittext_bg"
                android:orientation="horizontal"
                android:visibility="gone">

                <EditText
                    android:id="@+id/edCard"
                    style="@style/item_ed_style"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="left|center_vertical"
                    android:hint="@string/tip_input_card"
                    android:inputType="numberSigned"
                    android:paddingLeft="@dimen/layout_Margin_15"
                    android:paddingRight="@dimen/layout_Margin_15" />
            </LinearLayout>
        </FrameLayout>

        <LinearLayout
            android:id="@+id/sure_btn"
            style="@style/btn_style"
            android:layout_height="50dp"
            android:layout_marginBottom="@dimen/layout_Margin_15"
            android:layout_marginLeft="@dimen/layout_Margin_10"
            android:layout_marginRight="@dimen/layout_Margin_10"
            android:layout_marginTop="@dimen/layout_Margin_20"
            android:gravity="center">

            <TextView
                android:id="@+id/sure_btn_tv"
                style="@style/item_tv_title_style"
                android:text="@string/action_search"
                android:textColor="#ffffff" />
        </LinearLayout>

        <View
            android:id="@+id/space"
            style="@style/layout_allFilled_style"
            android:background="@color/bg_color_black" />

    </LinearLayout>
</LinearLayout>