<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/layout_allFilled_style"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <include
        android:id="@+id/title_bar"
        layout="@layout/header_btn_layout" />

    <ScrollView
        style="@style/layout_allFilled_style"
        android:layout_below="@+id/title_bar">

        <LinearLayout
            style="@style/layout_allFilled_style"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/title_bar"
            android:background="@color/white"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@mipmap/ic_launcher" />

            <TextView
                style="@style/item_tv_style"
                android:layout_marginTop="20dp"
                android:text="掌停宝" />

            <TextView
                style="@style/line_style"
                android:layout_marginTop="20dp" />

            <LinearLayout
                style="@style/item_layout"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <ImageView
                    style="@style/item_img_style"
                    android:src="@mipmap/ic_account" />

                <TextView
                    style="@style/line_2_style"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/layout_Margin_5"
                    android:layout_marginRight="@dimen/layout_Margin_5" />

                <EditText
                    android:id="@+id/ed_phone"
                    style="@style/item_tv_style"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:background="@null"
                    android:gravity="left|center_vertical"
                    android:hint="@string/tip_login_account"
                    android:inputType="number"
                    android:maxLength="11"
                    android:phoneNumber="true" />
            </LinearLayout>

            <TextView
                style="@style/line_style"
                android:layout_marginLeft="@dimen/layout_Margin_10"
                android:layout_marginRight="@dimen/layout_Margin_10" />

            <LinearLayout
                android:id="@+id/lv_code"
                style="@style/item_layout"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <ImageView
                    style="@style/item_img_style"
                    android:src="@mipmap/ic_msg" />

                <TextView
                    style="@style/line_2_style"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/layout_Margin_5"
                    android:layout_marginRight="@dimen/layout_Margin_5" />

                <EditText
                    android:id="@+id/ed_code"
                    style="@style/item_tv_style"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="4"
                    android:background="@null"
                    android:gravity="left|center_vertical"
                    android:hint="@string/tip_login_code"
                    android:inputType="number"
                    android:maxLength="8" />

                <TextView
                    style="@style/line_2_style"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/layout_Margin_5"
                    android:layout_marginRight="@dimen/layout_Margin_5" />

                <TextView
                    android:id="@+id/btn_code"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="6"
                    android:gravity="center"
                    android:text="@string/tip_login_send_code"
                    android:textColor="#FD790C"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                style="@style/line_style"
                android:layout_marginBottom="20dp" />

            <Button
                android:id="@+id/btn_sure"
                style="@style/btn_style"
                android:layout_width="match_parent"
                android:gravity="center"
                android:text="@string/tip_login_btn" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>