<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/layout_allFilled_style"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context="com.ajb.merchants.activity.ResetPasswordActivity">

    <include layout="@layout/header_btn_layout" />

    <ScrollView
        style="@style/layout_allFilled_style"
        android:scrollbars="none">

        <LinearLayout
            style="@style/layout_allFilled_style"
            android:orientation="vertical"
            android:paddingBottom="@dimen/layout_Margin_10"
            android:paddingTop="@dimen/layout_Margin_10">

            <LinearLayout style="@style/item_layout">

                <ImageView
                    style="@style/item_img_style"
                    android:src="@mipmap/ic_account" />

                <TextView
                    android:id="@+id/tvName"
                    style="@style/item_tv_style" />
            </LinearLayout>

            <View style="@style/line_style" />

            <LinearLayout style="@style/item_layout">

                <ImageView
                    style="@style/item_img_style"
                    android:src="@mipmap/ic_password" />

                <EditText
                    android:id="@+id/edPassword"
                    style="@style/item_ed_style"
                    android:hint="@string/tip_reset_pwd"
                    android:paddingRight="@dimen/layout_Margin_5" />
            </LinearLayout>

            <View style="@style/line_style" />

            <LinearLayout style="@style/item_layout">

                <ImageView
                    style="@style/item_img_style"
                    android:src="@mipmap/ic_comfirm_pwd" />

                <EditText
                    android:id="@+id/edConfirmPassword"
                    style="@style/item_ed_style"
                    android:hint="@string/tip_reset_pwd_confirm"
                    android:paddingRight="@dimen/layout_Margin_5" />
            </LinearLayout>

            <LinearLayout
                style="@style/item_layout"
                android:layout_marginTop="@dimen/layout_Margin_10">

                <ImageView
                    style="@style/item_img_style"
                    android:src="@mipmap/ic_phone" />

                <TextView
                    android:id="@+id/tvPhone"
                    style="@style/item_tv_style" />
            </LinearLayout>

            <View style="@style/line_style" />

            <LinearLayout style="@style/item_layout">

                <ImageView
                    style="@style/item_img_style"
                    android:src="@mipmap/ic_verification" />

                <EditText
                    android:id="@+id/edVerification"
                    style="@style/item_ed_style"
                    android:layout_weight="1"
                    android:hint="@string/tip_reset_phone_verification"
                    android:paddingRight="@dimen/layout_Margin_5" />

                <Button
                    android:id="@+id/btnVerification"
                    style="@style/btn_style"
                    android:layout_width="wrap_content"
                    android:layout_height="33dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="@dimen/layout_Margin_10"
                    android:enabled="false"
                    android:minWidth="95dp"
                    android:text="获取验证码"
                    android:textSize="@dimen/text_size_14" />
            </LinearLayout>

            <Button
                android:id="@+id/btnResetPassword"
                style="@style/btn_style"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="@dimen/layout_Margin_20"
                android:enabled="false"
                android:text="重置密码" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
