<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/layout_allFilled_style"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <include
        android:id="@+id/login_bar"
        layout="@layout/header_btn_layout" />

    <Button
        android:id="@+id/btnAddCouponCode"
        style="@style/btn_style"
        android:layout_marginLeft="@dimen/layout_Margin_10"
        android:layout_marginRight="@dimen/layout_Margin_10"
        android:layout_marginTop="@dimen/layout_Margin_10"
        android:text="@string/tip_add_coupon_code"
        android:textColor="@color/white" />

    <FrameLayout
        android:id="@+id/layoutAddCouponCode"
        style="@style/item_ed_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/layout_Margin_10"
        android:layout_marginLeft="@dimen/layout_Margin_10"
        android:layout_marginRight="@dimen/layout_Margin_10"
        android:layout_marginTop="@dimen/layout_Margin_10"
        android:visibility="gone">


        <LinearLayout
            android:id="@+id/layoutInputCouponCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                style="@style/item_ed_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/layout_Margin_10"
                android:layout_marginRight="@dimen/layout_Margin_10"
                android:layout_marginTop="@dimen/layout_Margin_10"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/code"
                    style="@style/item_ed_style"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@null"
                    android:hint="@string/tip_please_input_coupon_code"
                    android:padding="@dimen/layout_Margin_5" />

            </LinearLayout>


            <Button
                android:id="@+id/sure"
                style="@style/btn_style"
                android:layout_marginLeft="@dimen/layout_Margin_10"
                android:layout_marginRight="@dimen/layout_Margin_10"
                android:layout_marginTop="@dimen/layout_Margin_10"
                android:background="@color/btn_color_pressed"
                android:text="应用" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="invisible">

            <ImageView
                android:id="@+id/imgTip"
                style="@style/item_img_style"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@mipmap/pay_success" />

            <LinearLayout
                style="@style/layout_allWraped_style"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/msgTip"
                    style="@style/item_tv_second_style"
                    android:text="优惠码无效" />

                <TextView
                    android:id="@+id/goInTip"
                    style="@style/item_tv_second_style"
                    android:layout_marginLeft="2dp"
                    android:text="@string/goIn"
                    android:textColor="@color/btn_color_normal" />
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_Margin_10"
        android:layout_marginRight="@dimen/layout_Margin_10"
        android:background="@drawable/layout_border">

        <RelativeLayout
            android:id="@+id/layoutShare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_btn"
            android:orientation="horizontal"
            android:visibility="visible">

            <ImageView
                android:id="@+id/imgShareLogo"
                style="@style/item_img_style"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:src="@mipmap/couponcode_logo" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/imgShareLogo"
                android:layout_marginLeft="@dimen/layout_Margin_10"
                android:layout_marginRight="@dimen/layout_Margin_10"
                android:layout_marginTop="@dimen/layout_Margin_10"
                android:layout_toRightOf="@+id/imgShareLogo"
                android:orientation="vertical"
                android:paddingTop="@dimen/layout_Margin_5">


                <TextView
                    style="@style/item_tv_style"
                    android:background="@null"
                    android:text="想要优惠停车吗？" />

                <TextView
                    style="@style/item_tv_second_style"
                    android:layout_gravity="left"
                    android:layout_marginTop="@dimen/layout_Margin_10"
                    android:text="邀请您的好友"
                    android:textColor="#fd790c" />

            </LinearLayout>
        </RelativeLayout>
    </FrameLayout>

    <LinearLayout
        style="@style/layout_allFilled_style"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/share_reward" />

        <TextView
            style="@style/item_tv_third_style"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/layout_Margin_20"
            android:text="分享你的优惠码" />

        <TextView
            android:id="@+id/coupon_invite_code"
            style="@style/item_tv_title_style"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/layout_Margin_5"
            android:text=""
            android:textColor="@color/header_bg_color" />

        <TextView
            style="@style/item_tv_third_style"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/layout_Margin_5"
            android:layout_marginRight="@dimen/layout_Margin_5"
            android:layout_marginTop="@dimen/layout_Margin_5"
            android:gravity="center_horizontal"
            android:singleLine="false"
            android:text="当你的好友成为新用户后，首次使用你的优惠码，双方都会获得礼包" />
    </LinearLayout>
</LinearLayout>